# src/docs/swagger.yaml
@@ -1,10 +1,14 @@
 basePath: /v1
 definitions:
-  apikeys.CreateInput:
+  httpapi.APIKeyCreateDTO:
     properties:
       name:
         type: string
       scope:
+        enum:
+        - read
+        - write
+        - read_write
         type: string
     type: object
   httpapi.APIKeyCreateResponse:
@@ -52,20 +56,52 @@ definitions:
         description: RFC3339
         type: string
     type: object
-  snippets.CreateSnippetRequest:
+  httpapi.SnippetCreateDTO:
     properties:
       content:
+        maxLength: 250000
         type: string
       language:
+        maxLength: 32
         type: string
       name:
+        maxLength: 200
         type: string
       tags:
         items:
           type: string
+        maxItems: 20
         type: array
       visibility:
-        $ref: '#/definitions/snippets.Visibility'
+        allOf:
+        - $ref: '#/definitions/snippets.Visibility'
+        enum:
+        - public
+        - private
+    required:
+    - content
+    - name
+    type: object
+  httpapi.UserCreateDTO:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 72
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  httpapi.UserUpdateDTO:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 72
+        type: string
+      role:
+        type: string
     type: object
   snippets.Snippet:
     properties:
@@ -98,22 +134,6 @@ definitions:
     x-enum-varnames:
     - VisibilityPublic
     - VisibilityPrivate
-  users.CreateUserRequest:
-    properties:
-      email:
-        type: string
-      password:
-        type: string
-    type: object
-  users.UpdateUserInput:
-    properties:
-      email:
-        type: string
-      password:
-        type: string
-      role:
-        type: string
-    type: object
   users.UserResponse:
     properties:
       created_at:
@@ -172,7 +192,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/apikeys.CreateInput'
+          $ref: '#/definitions/httpapi.APIKeyCreateDTO'
       - description: CSRF token (required for SessionAuth)
         in: header
         name: X-CSRF-Token
@@ -367,7 +387,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/snippets.CreateSnippetRequest'
+          $ref: '#/definitions/httpapi.SnippetCreateDTO'
       - description: CSRF token (required for SessionAuth)
         in: header
         name: X-CSRF-Token
@@ -484,7 +504,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/snippets.CreateSnippetRequest'
+          $ref: '#/definitions/httpapi.SnippetCreateDTO'
       - description: CSRF token (required for SessionAuth)
         in: header
         name: X-CSRF-Token
@@ -565,7 +585,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/users.CreateUserRequest'
+          $ref: '#/definitions/httpapi.UserCreateDTO'
       produces:
       - application/json
       responses:
@@ -643,7 +663,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/users.UpdateUserInput'
+          $ref: '#/definitions/httpapi.UserUpdateDTO'
       - description: CSRF token (required for SessionAuth)
         in: header
         name: X-CSRF-Token
@@ -736,7 +756,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/users.UpdateUserInput'
+          $ref: '#/definitions/httpapi.UserUpdateDTO'
       - description: CSRF token (required for SessionAuth)
         in: header
         name: X-CSRF-Token
